Prevent listing buttons layout break in Gutenberg

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -584,7 +584,7 @@ input[type="button"].wpbdp-show-on-mobile {
     }
 
     input[type="button"].wpbdp-show-on-mobile {
-        padding: 1em 2em;
+        //padding: 1em 2em;
     }
 
     .wpbdp-hide-on-mobile {
